--- a/templates/index.html
+++ b/templates/index.html
@@ -50,12 +50,9 @@
         const output = document.getElementById("output");
         output.innerHTML = "Running script... Please wait.";
         try {
-          const response = await fetch(
-            "https://scrapper-gamma.vercel.app/run-script",
-            {
-              method: "POST",
-            }
-          );
+          const response = await fetch("/run-script", {
+            method: "POST",
+          });
           const data = await response.json();
 
           if (response.ok) {
